.. This file should contain the changes for the last release only, which
   will be included on the package's page on pypi. All older entries are
   kept in HISTORY.txt

Changelog
=========

4.0b1 - Unreleased
------------------

- Hide the rss and print document actions for new sites. Both are consistently
  supported by browsers today and don't need site specific actions anymore.
  [hannosch]

- We need to include ZCML from `plone.app.folder`, not just `plone.folder`.
  This refs http://dev.plone.org/plone/ticket/10127.
  [witsch, hannosch]

- Removed the no longer needed history viewlet. This refs
  http://dev.plone.org/plone/ticket/10102.
  [hannosch]

- Made history act as an ajax popup rather than an inline collapsible. The
  goal is to reduce rendering time when history isn't needed.
  [smcmahon]

- Updated author.pt to follow general markup conventions.
  References http://dev.plone.org/plone/ticket/9981
  [spliter]

- Updated templates to fill 'main' slot with <metal:main fill-slot='main'>
  construction instead of <div metal:fill-slot="main" tal:omit-tag="">
  [spliter]

- Re-factored plone_prefs/ templates to follow the recent markup conventions.
  References http://dev.plone.org/plone/ticket/9981
  [spliter] 

- Added 'All content' blog like view for folderish types.
  [elro]

- Re-factored folder listing and summary view.
  [elro]

- Updated templates to disable the columns with 'disable_MANAGER_NAME'
  pattern.
  [spliter]

- Add current portal type to the body css class like the section
  and template css class's.
  Refs https://dev.plone.org/plone/ticket/8777.
  [pelle]

- Deprecate the portlets_fetcher and macro_renderer templates.
  [davisagli]

- Clean up various HTML comments that were being emitted unnecessarily.
  [davisagli]

- On the Zope overview screen, make sure the user is authenticated at the Zope
  root before sending them to the upgrade view for a Plone site, when the Upgrade